--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "server for broccoli cheddar reviews",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app_hooked.js"
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,11 @@
   "homepage": "https://github.com/tsdlau/broccolicheddarsoup#readme",
   "dependencies": {
     "babel-preset-es2015-node": "^6.1.1",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-busboy": "^7.0.0",
     "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
     "source-map-support": "^0.5.6"
