--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "broccolicheddar-client",
-  "version": "1.0.0",
-  "description": "client-side for broccoli cheddar reviews",
+  "description": "client-side",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -9,16 +8,27 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "author": "",
   "license": "ISC",
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "node-sass-chokidar": "^1.3.3",
+    "prop-types": "^15.6.2",
     "react-bootstrap": "^0.32.1",
+    "react-markdown": "^3.3.4",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1"
   }
 }
