--- a/server/package.json
+++ b/server/package.json
@@ -25,14 +25,23 @@
   },
   "homepage": "https://github.com/tsdlau/broccolicheddarsoup#readme",
   "dependencies": {
-    "babel-preset-es2015-node": "^6.1.1",
-    "babel-preset-es2015-node6": "^0.4.0",
-    "babel-register": "^6.26.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.3",
+    "concurrently": "^3.6.0",
     "express": "^4.16.3",
-    "express-busboy": "^7.0.0",
-    "mongoose": "^5.1.1",
+    "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
-    "source-map-support": "^0.5.6"
+    "nodemon": "^1.18.3",
+    "prop-types": "^15.6.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1"
   }
 }
