--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
