--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,12 @@
   "license": "ISC",
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "node-sass-chokidar": "^1.3.3",
-    "prop-types": "^15.6.2",
-    "react-bootstrap": "^0.32.1",
-    "react-markdown": "^3.3.4",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-bootstrap": "^0.24.4",
-    "react-router-redux": "^4.0.8",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
+    "moment": "^2.22.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-markdown": "^3.3.0",
+    "react-scripts": "1.1.4",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
