--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "concurrently": "^3.6.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "firebase": "^5.5.5",
     "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3",
