--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "aaa",
+  "name": "broccolicheddarsoup",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -23,6 +24,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "firebase": "^5.9.0"
+    "firebase": "^5.9.0",
+    "node-sass": "^4.11.0"
   }
 }
